force-app/main/default/objects/Contact/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>