force-app/main/default/objects/Contact/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>